# agent-flight-recorder

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md  (+42 more)
backend/: mypy.ini  pyproject.toml  ruff.toml
backend/src/flight_recorder_backend/: __init__.py  __main__.py  cli.py  db.py  replay.py  server.py  test_generator.py
backend/tests/: conftest.py  test_annotation_api.py  test_comparison_api.py  test_health.py  test_replay.py  test_search_api.py  test_server.py  test_session_api.py  test_test_generator.py  test_websocket.py
desktop/: Cargo.toml
desktop/src/: app.rs  main.rs
desktop/src/views/: inspector.rs  mod.rs  timeline.rs  trace_list.rs
proto/: flight_recorder.proto
sdk/: mypy.ini  pyproject.toml  ruff.toml
sdk/src/flight_recorder/: __init__.py  annotation_storage.py  auto_inject.py  branch_storage.py  export.py  log_config.py  models.py  recorder.py  session_storage.py  storage.py
sdk/src/flight_recorder/adapters/: __init__.py  autogen.py  base.py  creator.py  crewai.py  langchain.py  langgraph.py
sdk/tests/: test_adapter_creator.py  test_annotation_models.py  test_annotation_storage.py  test_auto_inject.py  test_autogen_adapter.py  test_branch_models.py  test_branch_storage.py  test_comparison_models.py  test_crewai_adapter.py  test_export.py  test_langchain_adapter.py  test_langgraph_adapter.py  test_models.py  test_recorder.py  test_search_models.py  test_search_storage.py  test_session_models.py  test_session_storage.py  test_storage.py  test_ws_models.py
(+4 files in other folders)
