[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flight-recorder-backend"
version = "0.1.0"
description = "Agent Flight Recorder Backend Server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "grpcio>=1.56",
    "grpcio-tools>=1.56",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "httpx>=0.24"]

[tool.hatch.build.targets.wheel]
packages = ["src/flight_recorder_backend"]
