[package]
name = "flight-recorder-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["tokio"] }
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
tonic-build = "0.11"
