[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flight-recorder"
version = "0.1.0"
description = "AI Agent Flight Recorder SDK"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.2"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/flight_recorder"]
